salesforce/force-app/main/default/objects/CPQ_Bundle_Rule__mdt/CPQ_Bundle_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Defines product bundle combinations and their associated discounts. Used by configure_product and get_bundle_options to return valid bundle options based on customer segment.</description>
    <label>CPQ Bundle Rule</label>
    <pluralLabel>CPQ Bundle Rules</pluralLabel>
</CustomObject>