salesforce/force-app/main/default/objects/CPQ_Bundle_Rule__mdt/fields/BundleDiscount__c.field-meta.xml
<CustomField>
    <fullName>BundleDiscount__c</fullName>
    <label>Bundle Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Discount percentage applied when the full bundle is purchased together.</description>
</CustomField>