salesforce/force-app/main/default/objects/CPQ_Bundle_Rule__mdt/fields/BundleName__c.field-meta.xml
<CustomField>
    <fullName>BundleName__c</fullName>
    <label>Bundle Name</label>
    <length>100</length>
    <type>Text</type>
    <description>Display name returned to the agent when listing available bundles.</description>
</CustomField>