salesforce/force-app/main/default/objects/CPQ_Bundle_Rule__mdt/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <label>Customer Segment</label>
    <length>50</length>
    <type>Text</type>
    <description>Restricts this bundle to a specific segment (e.g., Enterprise, SMB, Public Sector). Blank matches all segments.</description>
</CustomField>