salesforce/force-app/main/default/objects/CPQ_Bundle_Rule__mdt/fields/IncludedProductCodes__c.field-meta.xml
<CustomField>
    <fullName>IncludedProductCodes__c</fullName>
    <label>Included Product Codes</label>
    <length>255</length>
    <type>Text</type>
    <description>Comma-separated list of Product2.ProductCode values that make up this bundle.</description>
</CustomField>