salesforce/force-app/main/default/objects/CPQ_Bundle_Rule__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Lower number = higher priority. Used to order bundle options returned to the agent.</description>
</CustomField>