salesforce/force-app/main/default/objects/CPQ_Bundle_Rule__mdt/fields/SeedProductFamily__c.field-meta.xml
<CustomField>
    <fullName>SeedProductFamily__c</fullName>
    <label>Seed Product Family</label>
    <length>100</length>
    <type>Text</type>
    <description>Product family that triggers this bundle rule. Blank matches any family.</description>
</CustomField>